docs/api/0.2.0/ironwood/ds/ByteBufferMap.md
<!-- Generated by IronDocs. Do not edit. -->

![IronDocs API reference](../../assets/irondocs.svg)

**Version 0\.2\.0**

[All packages](../../README.md) / [`ironwood.ds`](package-summary.md)

# ByteBufferMap

**Class** · `ironwood.ds.ByteBufferMap`

```java
public class ByteBufferMap<E extends Object> implements Iterable<E>
```

**Implements:** [`Iterable<E>`](../lang/Iterable.md)


## Member summary

[Fields](#fields) · [Constructors](#constructors) · [Methods](#methods)

| Member | Description |
| --- | --- |
| [`DEFAULT_INITIAL_CAPACITY`](#member-DEFAULT_INITIAL_CAPACITY) |  |
| [`DEFAULT_LOAD_FACTOR`](#member-DEFAULT_LOAD_FACTOR) |  |
| [`DEFAULT_MAX_KEY_LENGTH`](#member-DEFAULT_MAX_KEY_LENGTH) |  |
| [`ByteBufferMap()`](#member-ByteBufferMap-28--29-) |  |
| [`ByteBufferMap(int)`](#member-ByteBufferMap-28-int-29-) |  |
| [`ByteBufferMap(int,short)`](#member-ByteBufferMap-28-int-2c-short-29-) |  |
| [`ByteBufferMap(int,float)`](#member-ByteBufferMap-28-int-2c-float-29-) |  |
| [`ByteBufferMap(short)`](#member-ByteBufferMap-28-short-29-) |  |
| [`ByteBufferMap(short,float)`](#member-ByteBufferMap-28-short-2c-float-29-) |  |
| [`ByteBufferMap(float)`](#member-ByteBufferMap-28-float-29-) |  |
| [`ByteBufferMap(int,short,float)`](#member-ByteBufferMap-28-int-2c-short-2c-float-29-) |  |
| [`getInitialCapacity()`](#member-getInitialCapacity-28--29-) |  |
| [`getMaxKeyLength()`](#member-getMaxKeyLength-28--29-) |  |
| [`getLoadFactor()`](#member-getLoadFactor-28--29-) |  |
| [`size()`](#member-size-28--29-) |  |
| [`getCurrIteratorKey()`](#member-getCurrIteratorKey-28--29-) |  |
| [`isEmpty()`](#member-isEmpty-28--29-) |  |
| [`containsKey(byte[])`](#member-containsKey-28-byte-5b--5d--29-) |  |
| [`containsKey(ByteBuffer)`](#member-containsKey-28-ByteBuffer-29-) |  |
| [`containsKey(byte[],int,int)`](#member-containsKey-28-byte-5b--5d--2c-int-2c-int-29-) |  |
| [`get(byte[])`](#member-get-28-byte-5b--5d--29-) |  |
| [`get(ByteBuffer)`](#member-get-28-ByteBuffer-29-) |  |
| [`get(byte[],int,int)`](#member-get-28-byte-5b--5d--2c-int-2c-int-29-) |  |
| [`put(byte[],E)`](#member-put-28-byte-5b--5d--2c-E-29-) |  |
| [`put(ByteBuffer,E)`](#member-put-28-ByteBuffer-2c-E-29-) |  |
| [`put(byte[],int,int,E)`](#member-put-28-byte-5b--5d--2c-int-2c-int-2c-E-29-) |  |
| [`remove(byte[])`](#member-remove-28-byte-5b--5d--29-) |  |
| [`remove(ByteBuffer)`](#member-remove-28-ByteBuffer-29-) |  |
| [`remove(byte[],int,int)`](#member-remove-28-byte-5b--5d--2c-int-2c-int-29-) |  |
| [`clear()`](#member-clear-28--29-) |  |
| [`equals(Object)`](#member-equals-28-Object-29-) |  |
| [`hashCode()`](#member-hashCode-28--29-) |  |
| [`toString()`](#member-toString-28--29-) |  |
| [`iterator()`](#member-iterator-28--29-) |  |

## Fields

<a name="member-DEFAULT_INITIAL_CAPACITY"></a>

### `DEFAULT_INITIAL_CAPACITY`

```java
public static final int DEFAULT_INITIAL_CAPACITY = 128;
```


[Back to member summary](#member-summary)

<a name="member-DEFAULT_LOAD_FACTOR"></a>

### `DEFAULT_LOAD_FACTOR`

```java
public static final float DEFAULT_LOAD_FACTOR = 0.80f;
```


[Back to member summary](#member-summary)

<a name="member-DEFAULT_MAX_KEY_LENGTH"></a>

### `DEFAULT_MAX_KEY_LENGTH`

```java
public static final short DEFAULT_MAX_KEY_LENGTH = 256;
```


[Back to member summary](#member-summary)

## Constructors

<a name="member-ByteBufferMap-28--29-"></a>

### `ByteBufferMap()`

```java
public ByteBufferMap()
```


[Back to member summary](#member-summary)

<a name="member-ByteBufferMap-28-int-29-"></a>

### `ByteBufferMap(int)`

```java
public ByteBufferMap(int initialCapacity)
```


[Back to member summary](#member-summary)

<a name="member-ByteBufferMap-28-int-2c-short-29-"></a>

### `ByteBufferMap(int,short)`

```java
public ByteBufferMap(int initialCapacity, short maxKeyLength)
```


[Back to member summary](#member-summary)

<a name="member-ByteBufferMap-28-int-2c-float-29-"></a>

### `ByteBufferMap(int,float)`

```java
public ByteBufferMap(int initialCapacity, float loadFactor)
```


[Back to member summary](#member-summary)

<a name="member-ByteBufferMap-28-short-29-"></a>

### `ByteBufferMap(short)`

```java
public ByteBufferMap(short maxKeyLength)
```


[Back to member summary](#member-summary)

<a name="member-ByteBufferMap-28-short-2c-float-29-"></a>

### `ByteBufferMap(short,float)`

```java
public ByteBufferMap(short maxKeyLength, float loadFactor)
```


[Back to member summary](#member-summary)

<a name="member-ByteBufferMap-28-float-29-"></a>

### `ByteBufferMap(float)`

```java
public ByteBufferMap(float loadFactor)
```


[Back to member summary](#member-summary)

<a name="member-ByteBufferMap-28-int-2c-short-2c-float-29-"></a>

### `ByteBufferMap(int,short,float)`

```java
public ByteBufferMap(int initialCapacity, short maxKeyLength, float loadFactor)
```


[Back to member summary](#member-summary)

## Methods

<a name="member-getInitialCapacity-28--29-"></a>

### `getInitialCapacity()`

```java
public int getInitialCapacity()
```


[Back to member summary](#member-summary)

<a name="member-getMaxKeyLength-28--29-"></a>

### `getMaxKeyLength()`

```java
public short getMaxKeyLength()
```


[Back to member summary](#member-summary)

<a name="member-getLoadFactor-28--29-"></a>

### `getLoadFactor()`

```java
public float getLoadFactor()
```


[Back to member summary](#member-summary)

<a name="member-size-28--29-"></a>

### `size()`

```java
public int size()
```


[Back to member summary](#member-summary)

<a name="member-getCurrIteratorKey-28--29-"></a>

### `getCurrIteratorKey()`

```java
public ByteBuffer getCurrIteratorKey()
```


[Back to member summary](#member-summary)

<a name="member-isEmpty-28--29-"></a>

### `isEmpty()`

```java
public boolean isEmpty()
```


[Back to member summary](#member-summary)

<a name="member-containsKey-28-byte-5b--5d--29-"></a>

### `containsKey(byte[])`

```java
public boolean containsKey(byte[] key)
```


[Back to member summary](#member-summary)

<a name="member-containsKey-28-ByteBuffer-29-"></a>

### `containsKey(ByteBuffer)`

```java
public boolean containsKey(ByteBuffer key)
```


[Back to member summary](#member-summary)

<a name="member-containsKey-28-byte-5b--5d--2c-int-2c-int-29-"></a>

### `containsKey(byte[],int,int)`

```java
public boolean containsKey(byte[] key, int start, int keyLength)
```


[Back to member summary](#member-summary)

<a name="member-get-28-byte-5b--5d--29-"></a>

### `get(byte[])`

```java
public E get(byte[] key)
```


[Back to member summary](#member-summary)

<a name="member-get-28-ByteBuffer-29-"></a>

### `get(ByteBuffer)`

```java
public E get(ByteBuffer key)
```


[Back to member summary](#member-summary)

<a name="member-get-28-byte-5b--5d--2c-int-2c-int-29-"></a>

### `get(byte[],int,int)`

```java
public E get(byte[] key, int start, int keyLength)
```


[Back to member summary](#member-summary)

<a name="member-put-28-byte-5b--5d--2c-E-29-"></a>

### `put(byte[],E)`

```java
public E put(byte[] key, E value)
```


[Back to member summary](#member-summary)

<a name="member-put-28-ByteBuffer-2c-E-29-"></a>

### `put(ByteBuffer,E)`

```java
public E put(ByteBuffer key, E value)
```


[Back to member summary](#member-summary)

<a name="member-put-28-byte-5b--5d--2c-int-2c-int-2c-E-29-"></a>

### `put(byte[],int,int,E)`

```java
public E put(byte[] key, int start, int keyLength, E value)
```


[Back to member summary](#member-summary)

<a name="member-remove-28-byte-5b--5d--29-"></a>

### `remove(byte[])`

```java
public E remove(byte[] key)
```


[Back to member summary](#member-summary)

<a name="member-remove-28-ByteBuffer-29-"></a>

### `remove(ByteBuffer)`

```java
public E remove(ByteBuffer key)
```


[Back to member summary](#member-summary)

<a name="member-remove-28-byte-5b--5d--2c-int-2c-int-29-"></a>

### `remove(byte[],int,int)`

```java
public E remove(byte[] key, int start, int keyLength)
```


[Back to member summary](#member-summary)

<a name="member-clear-28--29-"></a>

### `clear()`

```java
public void clear()
```


[Back to member summary](#member-summary)

<a name="member-equals-28-Object-29-"></a>

### `equals(Object)`

```java
@Override
public boolean equals(Object otherObject)
```


[Back to member summary](#member-summary)

<a name="member-hashCode-28--29-"></a>

### `hashCode()`

```java
@Override
public int hashCode()
```


[Back to member summary](#member-summary)

<a name="member-toString-28--29-"></a>

### `toString()`

```java
@Override
public String toString()
```


[Back to member summary](#member-summary)

<a name="member-iterator-28--29-"></a>

### `iterator()`

```java
@Override
public Iterator<E> iterator()
```


[Back to member summary](#member-summary)

---

Generated from Ironwood source comments with **IronDocs**.
