docs/api/0.2.2-beta/ironwood/ds/ByteBufferMap.md
<!-- Generated by IronDocs. Do not edit. -->

![IronDocs API reference](../../assets/irondocs.svg)

**Version 0\.2\.2\-beta**

[All packages](../../README.md) / [`ironwood.ds`](package-summary.md)

# ByteBufferMap

**Class** · `ironwood.ds.ByteBufferMap`

```java
public class ByteBufferMap<E extends Object> implements Iterable<E>
```

**Implements:** [`Iterable<E>`](../lang/Iterable.md)

Maps byte-buffer keys to values.


## Member summary

[Fields](#fields) · [Constructors](#constructors) · [Methods](#methods)

| Member | Description |
| --- | --- |
| [`DEFAULT_INITIAL_CAPACITY`](#member-DEFAULT_INITIAL_CAPACITY) | The default initial capacity. |
| [`DEFAULT_LOAD_FACTOR`](#member-DEFAULT_LOAD_FACTOR) | The default load factor. |
| [`DEFAULT_MAX_KEY_LENGTH`](#member-DEFAULT_MAX_KEY_LENGTH) | The default max key length. |
| [`ByteBufferMap()`](#member-ByteBufferMap-28--29-) | Creates a new ByteBufferMap. |
| [`ByteBufferMap(int)`](#member-ByteBufferMap-28-int-29-) | Creates a new ByteBufferMap. |
| [`ByteBufferMap(int,short)`](#member-ByteBufferMap-28-int-2c-short-29-) | Creates a new ByteBufferMap. |
| [`ByteBufferMap(int,float)`](#member-ByteBufferMap-28-int-2c-float-29-) | Creates a new ByteBufferMap. |
| [`ByteBufferMap(short)`](#member-ByteBufferMap-28-short-29-) | Creates a new ByteBufferMap. |
| [`ByteBufferMap(short,float)`](#member-ByteBufferMap-28-short-2c-float-29-) | Creates a new ByteBufferMap. |
| [`ByteBufferMap(float)`](#member-ByteBufferMap-28-float-29-) | Creates a new ByteBufferMap. |
| [`ByteBufferMap(int,short,float)`](#member-ByteBufferMap-28-int-2c-short-2c-float-29-) | Creates a new ByteBufferMap. |
| [`getInitialCapacity()`](#member-getInitialCapacity-28--29-) | Returns the initial capacity. |
| [`getMaxKeyLength()`](#member-getMaxKeyLength-28--29-) | Returns the max key length. |
| [`getLoadFactor()`](#member-getLoadFactor-28--29-) | Returns the load factor. |
| [`size()`](#member-size-28--29-) | Returns the number of stored values. |
| [`getCurrIteratorKey()`](#member-getCurrIteratorKey-28--29-) | Returns the curr iterator key. |
| [`isEmpty()`](#member-isEmpty-28--29-) | Returns whether this value is empty. |
| [`containsKey(byte[])`](#member-containsKey-28-byte-5b--5d--29-) | Returns whether a value is associated with the supplied key. |
| [`containsKey(ByteBuffer)`](#member-containsKey-28-ByteBuffer-29-) | Returns whether a value is associated with the supplied key. |
| [`containsKey(byte[],int,int)`](#member-containsKey-28-byte-5b--5d--2c-int-2c-int-29-) | Returns whether a value is associated with the supplied key. |
| [`containsValue(E)`](#member-containsValue-28-E-29-) | Returns whether the supplied value is present. |
| [`get(byte[])`](#member-get-28-byte-5b--5d--29-) | Returns the requested value. |
| [`get(ByteBuffer)`](#member-get-28-ByteBuffer-29-) | Returns the requested value. |
| [`get(byte[],int,int)`](#member-get-28-byte-5b--5d--2c-int-2c-int-29-) | Returns the requested value. |
| [`put(byte[],E)`](#member-put-28-byte-5b--5d--2c-E-29-) | Associates the supplied key with the supplied value. |
| [`put(ByteBuffer,E)`](#member-put-28-ByteBuffer-2c-E-29-) | Associates the supplied key with the supplied value. |
| [`put(byte[],int,int,E)`](#member-put-28-byte-5b--5d--2c-int-2c-int-2c-E-29-) | Associates the supplied key with the supplied value. |
| [`remove(byte[])`](#member-remove-28-byte-5b--5d--29-) | Removes the requested value or entry. |
| [`remove(ByteBuffer)`](#member-remove-28-ByteBuffer-29-) | Removes the requested value or entry. |
| [`remove(byte[],int,int)`](#member-remove-28-byte-5b--5d--2c-int-2c-int-29-) | Removes the requested value or entry. |
| [`clear()`](#member-clear-28--29-) | Removes all stored values. |
| [`equals(Object)`](#member-equals-28-Object-29-) | Tests this value for equality with another object. |
| [`hashCode()`](#member-hashCode-28--29-) | Returns this value's hash code. |
| [`toString()`](#member-toString-28--29-) | Returns a textual representation of this value. |
| [`iterator()`](#member-iterator-28--29-) | Returns an iterator over this value's elements. |

## Fields

<a name="member-DEFAULT_INITIAL_CAPACITY"></a>

### `DEFAULT_INITIAL_CAPACITY`

```java
public static final int DEFAULT_INITIAL_CAPACITY = 128;
```

The default initial capacity.


[Back to member summary](#member-summary)

<a name="member-DEFAULT_LOAD_FACTOR"></a>

### `DEFAULT_LOAD_FACTOR`

```java
public static final float DEFAULT_LOAD_FACTOR = 0.80f;
```

The default load factor.


[Back to member summary](#member-summary)

<a name="member-DEFAULT_MAX_KEY_LENGTH"></a>

### `DEFAULT_MAX_KEY_LENGTH`

```java
public static final short DEFAULT_MAX_KEY_LENGTH = 256;
```

The default max key length.


[Back to member summary](#member-summary)

## Constructors

<a name="member-ByteBufferMap-28--29-"></a>

### `ByteBufferMap()`

```java
public ByteBufferMap()
```

Creates a new ByteBufferMap.


[Back to member summary](#member-summary)

<a name="member-ByteBufferMap-28-int-29-"></a>

### `ByteBufferMap(int)`

```java
public ByteBufferMap(int initialCapacity)
```

Creates a new ByteBufferMap.


[Back to member summary](#member-summary)

<a name="member-ByteBufferMap-28-int-2c-short-29-"></a>

### `ByteBufferMap(int,short)`

```java
public ByteBufferMap(int initialCapacity, short maxKeyLength)
```

Creates a new ByteBufferMap.


[Back to member summary](#member-summary)

<a name="member-ByteBufferMap-28-int-2c-float-29-"></a>

### `ByteBufferMap(int,float)`

```java
public ByteBufferMap(int initialCapacity, float loadFactor)
```

Creates a new ByteBufferMap.


[Back to member summary](#member-summary)

<a name="member-ByteBufferMap-28-short-29-"></a>

### `ByteBufferMap(short)`

```java
public ByteBufferMap(short maxKeyLength)
```

Creates a new ByteBufferMap.


[Back to member summary](#member-summary)

<a name="member-ByteBufferMap-28-short-2c-float-29-"></a>

### `ByteBufferMap(short,float)`

```java
public ByteBufferMap(short maxKeyLength, float loadFactor)
```

Creates a new ByteBufferMap.


[Back to member summary](#member-summary)

<a name="member-ByteBufferMap-28-float-29-"></a>

### `ByteBufferMap(float)`

```java
public ByteBufferMap(float loadFactor)
```

Creates a new ByteBufferMap.


[Back to member summary](#member-summary)

<a name="member-ByteBufferMap-28-int-2c-short-2c-float-29-"></a>

### `ByteBufferMap(int,short,float)`

```java
public ByteBufferMap(int initialCapacity, short maxKeyLength, float loadFactor)
```

Creates a new ByteBufferMap.


[Back to member summary](#member-summary)

## Methods

<a name="member-getInitialCapacity-28--29-"></a>

### `getInitialCapacity()`

```java
public int getInitialCapacity()
```

Returns the initial capacity.


[Back to member summary](#member-summary)

<a name="member-getMaxKeyLength-28--29-"></a>

### `getMaxKeyLength()`

```java
public short getMaxKeyLength()
```

Returns the max key length.


[Back to member summary](#member-summary)

<a name="member-getLoadFactor-28--29-"></a>

### `getLoadFactor()`

```java
public float getLoadFactor()
```

Returns the load factor.


[Back to member summary](#member-summary)

<a name="member-size-28--29-"></a>

### `size()`

```java
public int size()
```

Returns the number of stored values.


[Back to member summary](#member-summary)

<a name="member-getCurrIteratorKey-28--29-"></a>

### `getCurrIteratorKey()`

```java
public ByteBuffer getCurrIteratorKey()
```

Returns the curr iterator key.


[Back to member summary](#member-summary)

<a name="member-isEmpty-28--29-"></a>

### `isEmpty()`

```java
public boolean isEmpty()
```

Returns whether this value is empty.


[Back to member summary](#member-summary)

<a name="member-containsKey-28-byte-5b--5d--29-"></a>

### `containsKey(byte[])`

```java
public boolean containsKey(byte[] key)
```

Returns whether a value is associated with the supplied key.


[Back to member summary](#member-summary)

<a name="member-containsKey-28-ByteBuffer-29-"></a>

### `containsKey(ByteBuffer)`

```java
public boolean containsKey(ByteBuffer key)
```

Returns whether a value is associated with the supplied key.


[Back to member summary](#member-summary)

<a name="member-containsKey-28-byte-5b--5d--2c-int-2c-int-29-"></a>

### `containsKey(byte[],int,int)`

```java
public boolean containsKey(byte[] key, int start, int keyLength)
```

Returns whether a value is associated with the supplied key.


[Back to member summary](#member-summary)

<a name="member-containsValue-28-E-29-"></a>

### `containsValue(E)`

```java
public boolean containsValue(E value)
```

Returns whether the supplied value is present.


[Back to member summary](#member-summary)

<a name="member-get-28-byte-5b--5d--29-"></a>

### `get(byte[])`

```java
public E get(byte[] key)
```

Returns the requested value.


[Back to member summary](#member-summary)

<a name="member-get-28-ByteBuffer-29-"></a>

### `get(ByteBuffer)`

```java
public E get(ByteBuffer key)
```

Returns the requested value.


[Back to member summary](#member-summary)

<a name="member-get-28-byte-5b--5d--2c-int-2c-int-29-"></a>

### `get(byte[],int,int)`

```java
public E get(byte[] key, int start, int keyLength)
```

Returns the requested value.


[Back to member summary](#member-summary)

<a name="member-put-28-byte-5b--5d--2c-E-29-"></a>

### `put(byte[],E)`

```java
public E put(byte[] key, E value)
```

Associates the supplied key with the supplied value.


[Back to member summary](#member-summary)

<a name="member-put-28-ByteBuffer-2c-E-29-"></a>

### `put(ByteBuffer,E)`

```java
public E put(ByteBuffer key, E value)
```

Associates the supplied key with the supplied value.


[Back to member summary](#member-summary)

<a name="member-put-28-byte-5b--5d--2c-int-2c-int-2c-E-29-"></a>

### `put(byte[],int,int,E)`

```java
public E put(byte[] key, int start, int keyLength, E value)
```

Associates the supplied key with the supplied value.


[Back to member summary](#member-summary)

<a name="member-remove-28-byte-5b--5d--29-"></a>

### `remove(byte[])`

```java
public E remove(byte[] key)
```

Removes the requested value or entry.


[Back to member summary](#member-summary)

<a name="member-remove-28-ByteBuffer-29-"></a>

### `remove(ByteBuffer)`

```java
public E remove(ByteBuffer key)
```

Removes the requested value or entry.


[Back to member summary](#member-summary)

<a name="member-remove-28-byte-5b--5d--2c-int-2c-int-29-"></a>

### `remove(byte[],int,int)`

```java
public E remove(byte[] key, int start, int keyLength)
```

Removes the requested value or entry.


[Back to member summary](#member-summary)

<a name="member-clear-28--29-"></a>

### `clear()`

```java
public void clear()
```

Removes all stored values.


[Back to member summary](#member-summary)

<a name="member-equals-28-Object-29-"></a>

### `equals(Object)`

```java
@Override
public boolean equals(Object otherObject)
```

Tests this value for equality with another object.


[Back to member summary](#member-summary)

<a name="member-hashCode-28--29-"></a>

### `hashCode()`

```java
@Override
public int hashCode()
```

Returns this value's hash code.


[Back to member summary](#member-summary)

<a name="member-toString-28--29-"></a>

### `toString()`

```java
@Override
public String toString()
```

Returns a textual representation of this value.


[Back to member summary](#member-summary)

<a name="member-iterator-28--29-"></a>

### `iterator()`

```java
@Override
public Iterator<E> iterator()
```

Returns an iterator over this value's elements.


[Back to member summary](#member-summary)

---

Generated from Ironwood source comments with **IronDocs**.
